// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Phone verification Transformer Tests should add correct UI elements to schema when multiple methodType choices exists and sms is the first methodType choice 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "noMargin": true,
        "options": {
          "content": "oie.phone.verify.sms.sendText.without.phone",
        },
        "type": "Description",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      {
        "label": "oie.phone.sms.primaryButton",
        "options": {
          "actionParams": {
            "authenticator.methodType": "sms",
          },
          "step": "authenticator-verification-data",
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "label": "oie.phone.call.secondaryButton",
        "options": {
          "actionParams": {
            "authenticator.methodType": "voice",
          },
          "step": "authenticator-verification-data",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Phone verification Transformer Tests should add correct UI elements to schema when multiple methodType choices exists and voice is the first methodType choice 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "noMargin": true,
        "options": {
          "content": "oie.phone.verify.call.sendText.without.phone",
        },
        "type": "Description",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      {
        "label": "oie.phone.call.primaryButton",
        "options": {
          "actionParams": {
            "authenticator.methodType": "voice",
          },
          "step": "authenticator-verification-data",
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "label": "oie.phone.sms.secondaryButton",
        "options": {
          "actionParams": {
            "authenticator.methodType": "sms",
          },
          "step": "authenticator-verification-data",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Phone verification Transformer Tests should add correct UI elements to schema when only sms methodType choice exists 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "noMargin": true,
        "options": {
          "content": "oie.phone.verify.sms.sendText.without.phone",
        },
        "type": "Description",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      {
        "label": "oie.phone.sms.primaryButton",
        "options": {
          "actionParams": {
            "authenticator.methodType": "sms",
          },
          "step": "authenticator-verification-data",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Phone verification Transformer Tests should add correct UI elements to schema when only sms methodType choice exists and redacted phoneNumber and nickname exists in Idx response  1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "noMargin": true,
        "options": {
          "content": "oie.phone.verify.sms.sendText.with.phone.with.nickname",
        },
        "type": "Description",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      {
        "label": "oie.phone.sms.primaryButton",
        "options": {
          "actionParams": {
            "authenticator.methodType": "sms",
          },
          "step": "authenticator-verification-data",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Phone verification Transformer Tests should add correct UI elements to schema when only sms methodType choice exists and redacted phoneNumber exists in Idx response  1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "noMargin": true,
        "options": {
          "content": "oie.phone.verify.sms.sendText.with.phone.without.nickname",
        },
        "type": "Description",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      {
        "label": "oie.phone.sms.primaryButton",
        "options": {
          "actionParams": {
            "authenticator.methodType": "sms",
          },
          "step": "authenticator-verification-data",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Phone verification Transformer Tests should add correct UI elements to schema when only voice methodType choice exists 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "noMargin": true,
        "options": {
          "content": "oie.phone.verify.call.sendText.without.phone",
        },
        "type": "Description",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      {
        "label": "oie.phone.call.primaryButton",
        "options": {
          "actionParams": {
            "authenticator.methodType": "voice",
          },
          "step": "authenticator-verification-data",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Phone verification Transformer Tests should add correct UI elements to schema when only voice methodType choice exists and redacted phoneNumber and nickname exists in Idx response  1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "noMargin": true,
        "options": {
          "content": "oie.phone.verify.call.sendText.with.phone.with.nickname",
        },
        "type": "Description",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      {
        "label": "oie.phone.call.primaryButton",
        "options": {
          "actionParams": {
            "authenticator.methodType": "voice",
          },
          "step": "authenticator-verification-data",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Phone verification Transformer Tests should add correct UI elements to schema when only voice methodType choice exists and redacted phoneNumber exists in Idx response  1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.phone.verify.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "noMargin": true,
        "options": {
          "content": "oie.phone.verify.call.sendText.with.phone.without.nickname",
        },
        "type": "Description",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      {
        "label": "oie.phone.call.primaryButton",
        "options": {
          "actionParams": {
            "authenticator.methodType": "voice",
          },
          "step": "authenticator-verification-data",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
